--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.46.0",
     "axios": "^1.6.7",
+    "react-hot-toast": "^2.4.1",
+    "react-i18next": "^13.2.2",
+    "react-loader-spinner": "^5.3.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
